# book-management-rest-api

./: .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json  install-oatpp.sh  reinstall-cmake.sh
.github/workflows/: build-docker.yaml
sql/: 001_init.sql  002_init.sql  003_init.sql
src/: App.cpp  AppComponent.cpp  AppComponent.hpp  ConfigurationComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  SwaggerComponent.hpp
src/controller/: BookController.hpp  BorrowController.hpp  StaticController.hpp  UserController.hpp
src/db/: BookDb.hpp  BorrowDb.hpp  UserDb.hpp  UserDbPg.hpp
src/dto/: BookDto.hpp  BorrowDto.hpp  ConfigDto.hpp  PageDto.hpp  StatusDto.hpp  UserDto.hpp
src/service/: BookService.cpp  BookService.hpp  BorrowService.cpp  BorrowService.hpp  UserService.cpp  UserService.hpp
tests/: BookControllerTest.cpp  BookControllerTest.hpp  BorrowControllerTest.hpp  UserControllerTest.cpp  UserControllerTest.hpp  tests.cpp
tests/app/: TestClient.hpp  TestComponent.hpp  TestDatabaseComponent.hpp
